--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             colocarem em prática boas ideias. Vamos 
             conversar?</p>
             <div class="links">
-                <a class="insta" href="https://instagram.com/rafaballerini" target="_blank">Instagram</a>
-                <a class="" href="https://github.com/guilhermeonrails" target="_blank">GitHub</a>
+                <a class="insta" href="https://www.linkedin.com/in/nicolas-faria-8b6946329/" target="_blank">Instagram</a>
+                <a class="" href="https://github.com/natdfcod" target="_blank">GitHub</a>
             </div>
         </section>
         <img src="./img/Imagem.png" alt="Foto da Joana Santos programando">
