--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             colocarem em prática boas ideias. Vamos 
             conversar?</p>
             <div class="links">
-                <a class="insta" href="https://www.linkedin.com/in/nicolas-faria-8b6946329/" target="_blank">Instagram</a>
+                <a class="insta" href="https://www.linkedin.com/in/nicolas-faria-8b6946329/" target="_blank">Linkedin</a>
                 <a class="" href="https://github.com/natdfcod" target="_blank">GitHub</a>
             </div>
         </section>
